<resources>
    <string name="app_name">Restaurant-Mobile-App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="textViewMenuLabel">All Menu:</string>
    <string name="textViewFoodMenuLabel">Food Menu:</string>
    <string name="textViewDrinkMenuLabel">Drink Menu:</string>
    <string name="textViewBranchLabel">Branch</string>
    <string name="bayar">Bayar</string>
    <string name="temperature">Temperature:</string>
    <string name="placeholder_nama">Nama Makanan</string>
    <string name="placeholder_harga">Rp10.000</string>
    <string name="placeholder_desc">Deskripsi Makanan\nIni adalah deskripsi makanan</string>
    <string name="placeholder_sold">10rb+ terjual</string>
    <string name="placeholder_total_pesanan">0</string>
    <string name="hargaMakanan">%1$s %2$s</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="placeholder_search">Search</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="menuNotFound">Makanan tidak ditemukan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celcius_symbol">°C</string>
    <string name="channel_name">ScanPayment</string>
    <string name="channel_description">This is scan payment channel</string>
</resources>