<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize" >

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation"
    />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="621dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main">

        <TextView
            android:id="@+id/textViewMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewMenuLabel" />

        <TextView
            android:id="@+id/textViewFoodMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewFoodMenuLabel" />

        <TextView
            android:id="@+id/textViewDrinkMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDrinkMenuLabel" />

        <TextView
            android:id="@+id/textViewBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewBranchLabel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>